// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match default snapshot 1`] = `
<DocumentFragment>
  <div
    class="jsx-2616149830 drawer-slider-root"
  >
    <button
      class="jsx-2616149830 button-menu"
      data-testid="button-menu"
      type="button"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          fill="#f0f0f0"
        />
      </svg>
    </button>
    <div
      class="jsx-2616149830 drawer-slider-container"
    >
      <aside
        class="jsx-4236861201 drawer-root"
      >
        <div
          class="jsx-961371421 avatar-root"
        >
          <img
            alt=""
            class="jsx-961371421"
            src="/static/images/avatar_default.svg"
          />
        </div>
        <section
          class="jsx-4236861201"
        >
          <p
            class="jsx-4236861201 name"
          >
            Hello, Ashley!
          </p>
        </section>
        <section
          class="jsx-4236861201 locale-container"
        >
          <div
            class="jsx-1468845466 locale-display-root"
          >
            <span
              class="jsx-1468845466"
            >
              Language: English
            </span>
          </div>
        </section>
        <section
          class="jsx-4236861201 button-container"
        >
          <button
            class="jsx-4236861201 button-function"
            data-testid="button-upload"
            type="button"
          >
            Upload CSV
          </button>
        </section>
      </aside>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match default snapshot after close: should match default snapshot 1`] = `
<DocumentFragment>
  <div
    class="jsx-2616149830 drawer-slider-root"
  >
    <button
      class="jsx-2616149830 button-menu"
      data-testid="button-menu"
      type="button"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          fill="#f0f0f0"
        />
      </svg>
    </button>
    <div
      class="jsx-2616149830 drawer-slider-container"
    >
      <aside
        class="jsx-4236861201 drawer-root"
      >
        <div
          class="jsx-961371421 avatar-root"
        >
          <img
            alt=""
            class="jsx-961371421"
            src="/static/images/avatar_default.svg"
          />
        </div>
        <section
          class="jsx-4236861201"
        >
          <p
            class="jsx-4236861201 name"
          >
            Hello, Ashley!
          </p>
        </section>
        <section
          class="jsx-4236861201 locale-container"
        >
          <div
            class="jsx-1468845466 locale-display-root"
          >
            <span
              class="jsx-1468845466"
            >
              Language: English
            </span>
          </div>
        </section>
        <section
          class="jsx-4236861201 button-container"
        >
          <button
            class="jsx-4236861201 button-function"
            data-testid="button-upload"
            type="button"
          >
            Upload CSV
          </button>
        </section>
      </aside>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match open snapshot 1`] = `
<DocumentFragment>
  <div
    class="jsx-2616149830 drawer-slider-root"
  >
    <button
      class="jsx-2616149830 button-menu"
      data-testid="button-menu"
      type="button"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          fill="#f0f0f0"
        />
      </svg>
    </button>
    <div
      class="jsx-2616149830 drawer-slider-container drawer-slider-container--open"
    >
      <aside
        class="jsx-4236861201 drawer-root"
      >
        <div
          class="jsx-961371421 avatar-root"
        >
          <img
            alt=""
            class="jsx-961371421"
            src="/static/images/avatar_default.svg"
          />
        </div>
        <section
          class="jsx-4236861201"
        >
          <p
            class="jsx-4236861201 name"
          >
            Hello, Ashley!
          </p>
        </section>
        <section
          class="jsx-4236861201 locale-container"
        >
          <div
            class="jsx-1468845466 locale-display-root"
          >
            <span
              class="jsx-1468845466"
            >
              Language: English
            </span>
          </div>
        </section>
        <section
          class="jsx-4236861201 button-container"
        >
          <button
            class="jsx-4236861201 button-function"
            data-testid="button-upload"
            type="button"
          >
            Upload CSV
          </button>
        </section>
      </aside>
    </div>
  </div>
</DocumentFragment>
`;
